--- a/amplify/Anchor.toml
+++ b/amplify/Anchor.toml
@@ -1,12 +1,12 @@
 [programs.localnet]
-amplify = "5xJX49gW56EWkQJeBELE74TsQeNogtuR3DyHJGF69SoC"
+amplify = "7BFUYjtQA6wXd4WgGGFrDiZ8r2iXNSnDPKT8J2ZHs7Dw"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/home/jackliellcock/.config/solana/id.json"
+wallet = "/home/tristan/.config/solana/id.json"
 
 [scripts]
 test = "mocha -t 1000000 tests/"
