--- a/amplify/app/package.json
+++ b/amplify/app/package.json
@@ -12,13 +12,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-router-dom": "^5.0.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-pdf": "^5.4.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -45,6 +46,7 @@
       "last 1 safari version"
     ]
   },
-   "engines" : { "node" : ">=0.12" }
+  "engines": {
+    "node": ">=0.12"
+  }
 }
-
